# fast-mic

./: README.md
app/: README.md  pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/example/fast_mic/: MainActivity.kt
app/android/app/src/profile/: AndroidManifest.xml
app/lib/: main.dart  socket.dart  subscriber.dart
app/lib/exception/: default_exception.dart  not_connected_exception.dart
client/: .gitignore  Cargo.toml  build.rs
client/src/: audio.rs  common.rs  event_loop.rs  lib.rs  main.rs  seeker.rs  socket.rs
